# buildguard

./: .gitignore  README.md  docker-compose.frontend.yml  docker-compose.yml  mongo-init.js  pyproject.toml  verify_db_content.py  verify_feature_loading.py
build-commit-pipeline/backend/: pyproject.toml  requirements.txt
build-commit-pipeline/backend/app/: __init__.py  celery_app.py
build-commit-pipeline/backend/app/api/routes/: __init__.py  failed_commits.py  projects.py  scan_results.py
build-commit-pipeline/backend/app/services/: scan_jobs_repository.py  scan_results_repository.py
build-commit-pipeline/backend/app/tasks/: __init__.py  ingestion.py  sonar.py
build-commit-pipeline/backend/pipeline/: github_api.py
build-risk/backend/: pyproject.toml
build-risk/backend/app/: config.py  main.py
build-risk/backend/app/api/: auth.py  dashboard.py  integrations.py  sonar.py  tokens.py  webhook.py  websockets.py
build-risk/backend/app/api/endpoints/: gate.py
build-risk/backend/app/dtos/: github.py  repository.py  user.py
build-risk/backend/app/infra/: github.py  sonar.py
build-risk/backend/app/infra/repositories/: build_sample.py  github_installation.py  scan_result.py
build-risk/backend/app/models/entities/: build_sample.py  imported_repository.py  scan_job.py  scan_result.py
build-risk/backend/app/repositories/: available_repository.py  failed_scan.py  imported_repository.py  scan_job.py  user.py  workflow_run.py
build-risk/backend/app/services/: auth_service.py  build_service.py  diff_service.py  heuristics.py  integration_service.py  notifications.py  pipeline_orchestrator.py  repository_service.py  sonar_service.py
build-risk/backend/app/services/extracts/: __init__.py  base.py  (+4 more)
build-risk/backend/app/tasks/: __init__.py  base.py  extractors.py  ingestion.py  processing.py  sonar.py
build-risk/backend/app/utils/: locking.py
build-risk/backend/app/workers/: __init__.py  orchestrator.py
build-risk/backend/tests/: test_diff_analyzer_logic.py  test_git_feature_extractor_mock.py
services/pipeline-backend/: .env.example  pyproject.toml  setup-permissions.sh
services/pipeline-backend/app/: celery_app.py  main.py
services/pipeline-backend/app/core/: __init__.py  config.py  logging.py  redis.py
services/pipeline-backend/app/domain/: __init__.py
services/pipeline-backend/app/entitties/: __init__.py
services/pipeline-backend/app/infra/: __init__.py  github.py
services/pipeline-backend/app/models/: __init__.py
services/pipeline-backend/app/repositories/: __init__.py  build_sample.py  build_samples_repository.py  failed_commits_repository.py  imported_repository.py  projects_repository.py  repository.py  scan_jobs_repository.py  scan_results_repository.py  workflow_run.py
services/pipeline-backend/app/scripts/: seed_features.py
services/pipeline-backend/app/services/: __init__.py  extractor_service.py  files.py  heuristics.py  notifications.py  scan_jobs_repository.py  sonar_service.py  user_service.py
services/pipeline-backend/app/tasks/: dataset_import.py  dataset_processor.py  extractors.py  github_ingestion.py  ingestion.py  processing.py  sonar.py  submission.py
services/pipeline-backend/app/utils/: events.py
services/pipeline-backend/app/workers/: __init__.py  base.py  orchestrator.py
services/pipeline-backend/scripts/: seed_features.py  verify_features.py
(+306 files in other folders)
